k8s/base/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: archivist
  labels:
    app: archivist
    environment: production
